[package]
name = "mqttbytes5"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = []
boxed_string = []
binary_string = []

[dependencies]
bytes = "1.5.0"
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"

[[bench]]
name = "benchmark"
harness = false