[package]
name = "mqtt-bytes-v5"
version = "0.1.2"
edition = "2021"
resolver = "2"
homepage = "https://github.com/alfredotg/mqtt-bytes-v5"
repository = "https://github.com/alfredotg/mqtt-bytes-v5"
description = "MQTT v5 serialization and deserialization"
license = "Apache-2.0"
keywords = ["mqtt", "mqtt5"]

[features]
default = []
cow_string = []
boxed_string = []
binary_string = []

[dependencies]
bytes = "1.5.0"
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"

[[bench]]
name = "benchmark"
harness = false